Modify dataset properties

--- a/src/app/dataset-detail/dataset-detail.component.html
+++ b/src/app/dataset-detail/dataset-detail.component.html
@@ -3,7 +3,7 @@
 </p>
 <div *ngIf="dataset">
   <h4>{{dataset.name}}</h4>
-  <img src="{{dataset.image}}"/>
+  <img src="{{dataset.thumbnailUrl}}"/>
   <ul>
     <li>{{dataset.date}}</li>
     <li>{{dataset.about}}</li>
