--- a/src/app/dataset/dataset.component.html
+++ b/src/app/dataset/dataset.component.html
@@ -2,9 +2,8 @@
   <div class="card-block">
     <h3 class="card-title">{{dataset.name}}</h3>
     <p>{{dataset.about}}</p>
-    <a class="btn btn-primary btn-sm" [routerLink]="['/catalog', dataset.id]">Details</a>
+    <a class="btn btn-primary" [routerLink]="['/catalog', dataset.id]">Details</a>
   </div>
-
 </div>
 
 
