--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/catalog']">Help</a>
+          <a class="nav-link" [routerLink]="['/help']">Help</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
