Add leaflet map to DatasetDetailComponent

--- a/src/app/dataset-detail/dataset-detail.component.html
+++ b/src/app/dataset-detail/dataset-detail.component.html
@@ -11,5 +11,8 @@
       <button class="btn btn-secondary" (click)="preview()">Preview</button>
       <p><a class="card-link" [routerLink]="['/catalog']">Back to catalog</a></p>
     </div>
+    <div class="card-block">
+      <div id="leaflet-map"></div>
+    </div>
   </div>
 </div>
