Convert to use gis-data-catalog-api

--- a/src/app/dataset/dataset.component.html
+++ b/src/app/dataset/dataset.component.html
@@ -2,7 +2,7 @@
   <div class="card-block">
     <h3 class="card-title">{{dataset.name}}</h3>
     <p>{{dataset.about}}</p>
-    <a class="btn btn-primary" [routerLink]="['/catalog/datasets', dataset.id]">Details</a>
+    <a class="btn btn-primary" [routerLink]="['/catalog/datasets', dataset._id]">Details</a>
   </div>
 </div>
 
