--- a/src/app/dataset-detail/dataset-detail.component.html
+++ b/src/app/dataset-detail/dataset-detail.component.html
@@ -10,5 +10,13 @@
   <div class="card-footer">
     <button class="btn btn-primary" (click)="download()">Download</button>
     <p><a class="card-link" [routerLink]="['/catalog']">Back to catalog</a></p>
+    <p>
+      <a rel="license" href="//creativecommons.org/licenses/by/4.0/">
+        <img alt="Creative Commons License" style="border-width:0"
+             src="//i.creativecommons.org/l/by/4.0/88x31.png"/>
+      </a>
+      This work is licensed under a <a rel="license" href="//creativecommons.org/licenses/by/4.0/">Creative Commons
+      Attribution 4.0 International License</a>
+    </p>
   </div>
 </div>
