--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-9">
-    <app-dataset *ngFor="let dataset of datasets" [dataset]="dataset"></app-dataset>
-  </div>
-  <div class="col-3">
+  <div class="col-md-3">
     <app-catalog-search></app-catalog-search>
+  </div>
+  <div class="col-md-9">
+    <app-dataset *ngFor="let dataset of datasets" [dataset]="dataset"></app-dataset>
   </div>
 </div>
 
