--- a/src/app/catalog-search/catalog-search.component.sass
+++ b/src/app/catalog-search/catalog-search.component.sass
@@ -1,2 +1,9 @@
+.search-card
+  margin-top: 1em
+
 .search-result
   cursor: pointer
+
+.search-result:hover
+  color: #fff
+  background-color: #0275d8
