--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,19 @@
 <div class="container">
   <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" [routerLink]="['/catalog']">{{title}}</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <div class="mr-auto"></div>
+      <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/help']">Help</a>
         </li>
       </ul>
     </div>
   </nav>
-  <div class="row">
-    <div class="col">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
