--- a/src/app/catalog-search/catalog-search.component.html
+++ b/src/app/catalog-search/catalog-search.component.html
@@ -7,7 +7,7 @@
       </div>
     </form>
     <ul class="list-group">
-      <li *ngFor="let dataset of datasets | async"
+      <li *ngFor="let dataset of datasets$ | async"
           (click)="gotoDetail(dataset)" class="list-group-item search-result">
         {{dataset.name}}
       </li>
